# pdf_rag

./: pyproject.toml
knowledge/: user_preference.txt
src/pdf_rag/: crew.py  main.py
